crates/reinhardt-urls/crates/routers-macros/tests/ui/fail/double_slash.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: double slash '//' not allowed
	let _path = path!("/users//posts/");
}
